welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:31: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:37: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:47: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:57: error: not found: value dogHouse
		dogHouse();		
                ^