welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def Niche(){
	 baisseBrosse();
	 
	 for(j<-1 to 2 ){
	 	avance();
	 }
	 gauche();
	 for(j<-1 to 2 ){
	 	avance();
	 }
	 gauche();
	 for(j<-1 to 2 ){
	 	avance();
	 }
	 gauche();
	 for(j<-1 to 2 ){
	 	avance();
	 }
	 gauche();
	 leveBrosse();
}


Niche();